--- a/style.css
+++ b/style.css
@@ -5,21 +5,36 @@ body {
     padding: 0;
     border: 0;
     margin: 0;
+    font-family: 'Helvetica Neue', sans-serif;
 }
 
 .header, .footer {
     display: flex;
-    padding: 0;
+    /*padding: 0;
     border: 0;
-    margin: 0;
+    margin: 0;*/
     background-color: #1F2937;
     color: #f9faf8;
+}
+
+.header {
+    justify-content: space-between;
+    padding: 35px 225px;
+}
+
+.header img {
+    align-self: center;
+    border-radius: 7%;
+    border: 10px;
+    border-color: #E5E7EB;
 }
 
 .header-links {
     display: flex;
     justify-content: space-between;
-    padding: 0;
+    align-self: center;
+    gap: 15px;
+    padding: 15px;
     border: 0;
     margin: 0;
 }
@@ -34,7 +49,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: #1F2937;
-    padding: 0;
+    padding: 35px 225px;
     border: 0;
     margin: 0;
 }
@@ -43,6 +58,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 10px;
     padding: 0;
     border: 0;
     margin: 0;
@@ -50,7 +66,7 @@ body {
 
 .main-title {
     font-size: 48px;
-    font-weight: 48px extra bold;
+    font-weight: 800;
     color: #f9faf8;
 }
 
@@ -61,6 +77,13 @@ body {
 
 button {
     background-color: #3882F6;
+    color: #E5E7EB;
+    font-weight: 700;
+    border-radius: 12%;
+    max-width: 105px;
+    min-height: 35px;
+    border: 5px;
+    border-color: #E5E7EB;
 }
 
 .section-two {
@@ -74,7 +97,7 @@ button {
 
 .title-two {
     font-size: 36px;
-    font-weight: extra-bold;
+    font-weight: 800;
     color: #1F2937;
 }
 
@@ -104,7 +127,8 @@ button {
     justify-content: center;
     background-color: #E5E7EB;
     font-size: 36px;
-    font-weight: light italic;
+    font-style: italic;
+    font-weight: 300;
     color: #1F2937;
     padding: 0;
     border: 0;
